--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Document</title>
 </head>
 <body>
-  <p><b> Pleas enter your email and password</b></p>
+ <form> <p><b> Pleas enter your email and password</b></p>
   <p><b>Email</b></p>
   <input type="email">
   <p><b>password</b></p>
   <input type="password"> <br>
-  <input type="submit">
+  <input type="submit"></form>
 </body>
 </html>
