--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 </head>
 <body>
  <form> <p><b> Pleas enter your email and password</b></p>
+  
   <p><b>Email</b></p>
+  
   <input type="email">
+ 
   <p><b>password</b></p>
+  
   <input type="password"> <br>
-  <input type="submit"></form>
+  <input type="submit">
+</form>
 </body>
 </html>
