--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
   <title>Document</title>
 </head>
 <body>
- <form> <p><b> Pleas enter your email and password</b></p>
-  
-  <p><b>Email</b></p>
-  
-  <input type="email">
- 
-  <p><b>password</b></p>
-  
+  <p><b> Pleas enter your email and password</b></p>
+  <form> 
+  <label for="Email"><b>Email</b></label> <br>
+  <input type="email"><br> <br>
+  <label for="Password"><b>Password</b></label> br
   <input type="password"> <br>
   <input type="submit">
 </form>
