--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <form> 
   <label for="Email"><b>Email</b></label> <br>
   <input type="email"><br> <br>
-  <label for="Password"><b>Password</b></label> br
+  <label for="Password"><b>Password</b></label> 
   <input type="password"> <br>
   <input type="submit">
 </form>
