--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <p><b> Pleas enter your email and password</b></p>
   <form> 
   <label for="Email"><b>Email</b></label> <br>
-  <input type="email"><br> <br>
-  <label for="Password"><b>Password</b></label> 
+  <input type="email"><br> <br> <br>
+  <label for="Password"><b>Password</b></label><br>
   <input type="password"> <br>
   <input type="submit">
 </form>
